--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div id="main" class="container">
 
-    <h1 id="title">Handwritten Maths Symbols</h1>
+    <h1 id="title">Handwritten Maths Symbols Recognition</h1>
 
     <!-- Drag and Drop container-->
     <div class="upload-area" id="uploadfile">
